--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </nav>
             </header>
             <div class="home-content wrapper">
-                <h1 class="page-title">Welcome to TOP's Portfolio!</h1>
+                <h1 class="page-title">TOP's Portfolio!</h1>
             </div>
         </div>
 
